# chator-service

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  logging.rs  main.rs  utils.rs
src/capture_injector/: message_container.rs  mod.rs  syringe_container.rs
src/comms/: mod.rs  state.rs
src/lib_only/: chat_message.rs  cmd_dispatch.rs  dice_roll.rs  friends_list.rs  mod.rs
src/model/: dice_roll.rs  mod.rs  swtor_message.rs  user_character_message.rs
src/share/: dll_command.rs  mod.rs  module_ports.rs  raw_dice_roll.rs  raw_swtor_message.rs
src/swtor/: mod.rs
src/swtor_hook/: message_hash_container.rs  mod.rs  post.rs
