[package]
name = "chator-service"
version = "0.1.0"
edition = "2024"
authors = ["Emma Davenport"]
license = "AGPL-3.0"

[dependencies]
windows = "0.62.2"

chrono = {version =  "0.4", features = ["serde"]}

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Injection
ctor = "0.2.8"
dll-syringe = { version = "0.17.1", features = ["payload-utils"] }
retour = { version = "0.4.0-alpha.3", features = ["static-detour"] }
