[package]
name = "chator-service"
version = "0.1.0"
edition = "2024"
authors = ["Emma Davenport"]
license = "AGPL-3.0"

[lib]
name = "swtor_chat_capture"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "chator-service"
path = "src/main.rs"

[dependencies]
chrono = {version =  "0.4", features = ["serde"]}

# Helpers
int-enum = "1.1"

# Misc
thiserror = "2.0"
microseh = "1.1"
encoding_rs = "0.8"

# Hashing
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Injection
ctor = "0.2.8"
dll-syringe = { version = "0.17.1", features = ["payload-utils"] }
retour = { version = "0.4.0-alpha.3", features = ["static-detour"] }

# Windows
clipboard-win = "5.0.0"
windows = { version = "0.52", features = [
    "Data_Xml_Dom", 
    "Win32_Foundation", 
    "Win32_Security", 
    "Win32_System_Memory",
    "Win32_System_Threading", 
    "Win32_System_LibraryLoader", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse", 
    "Win32_System_ProcessStatus", 
    "Win32_UI_WindowsAndMessaging"] }
